--- a/.travis.yml
+++ b/.travis.yml
@@ -54,6 +54,7 @@ install:
         clone_install SDL_image;
         clone_install SDL_ttf;
         clone_install SDL_mixer;
+        cd $TRAVIS_BUILD_DIR;
         sudo apt-get -y install libgstreamer1.0-dev gstreamer1.0-alsa gstreamer1.0-plugins-base;
         sudo apt-get -y install python-dev libsmpeg-dev libswscale-dev libavformat-dev libavcodec-dev libjpeg-dev libtiff4-dev libX11-dev libmtdev-dev;
         sudo apt-get -y install python-setuptools build-essential libgl1-mesa-dev libgles2-mesa-dev;
